tests/expectations/parser/expression/literal/int_parse/implicit.out
namespace = "ParseExpression"
expectation = "Fail"
outputs = [
    """
Error [EPAR0370017]: Could not parse the implicit value: 123.
    --> test:1:1
     |
   1 | 123
     | ^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 123.
    --> test:1:1
     |
   1 | 123
     | ^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 456.
    --> test:1:1
     |
   1 | 456
     | ^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 87377802873778028737780287377802873778028737780287377802873778028737780287377802.
    --> test:1:1
     |
   1 | 87377802873778028737780287377802873778028737780287377802873778028737780287377802
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 8737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802.
    --> test:1:1
     |
   1 | 8737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 340130024.
    --> test:1:1
     |
   1 | 340130024
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 158951116.
    --> test:1:1
     |
   1 | 158951116
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 155529659.
    --> test:1:1
     |
   1 | 155529659
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 642023166.
    --> test:1:1
     |
   1 | 642023166
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 228481736.
    --> test:1:1
     |
   1 | 228481736
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 469712960.
    --> test:1:1
     |
   1 | 469712960
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 929437719.
    --> test:1:1
     |
   1 | 929437719
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 721072814.
    --> test:1:1
     |
   1 | 721072814
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 363254789.
    --> test:1:1
     |
   1 | 363254789
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 906732565.
    --> test:1:1
     |
   1 | 906732565
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 288246391.
    --> test:1:1
     |
   1 | 288246391
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 724940549.
    --> test:1:1
     |
   1 | 724940549
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 487101620.
    --> test:1:1
     |
   1 | 487101620
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 261373583.
    --> test:1:1
     |
   1 | 261373583
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 891163927.
    --> test:1:1
     |
   1 | 891163927
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 743967544.
    --> test:1:1
     |
   1 | 743967544
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 8372586.
    --> test:1:1
     |
   1 | 8372586
     | ^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 461793278.
    --> test:1:1
     |
   1 | 461793278
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 806307045.
    --> test:1:1
     |
   1 | 806307045
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 122764546.
    --> test:1:1
     |
   1 | 122764546
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 356336181.
    --> test:1:1
     |
   1 | 356336181
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 158370903.
    --> test:1:1
     |
   1 | 158370903
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 774460877.
    --> test:1:1
     |
   1 | 774460877
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 557174131.
    --> test:1:1
     |
   1 | 557174131
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 492401267.
    --> test:1:1
     |
   1 | 492401267
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 893445620.
    --> test:1:1
     |
   1 | 893445620
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 957757048.
    --> test:1:1
     |
   1 | 957757048
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 721540649.
    --> test:1:1
     |
   1 | 721540649
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 390746493.
    --> test:1:1
     |
   1 | 390746493
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 211251725.
    --> test:1:1
     |
   1 | 211251725
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 938266114.
    --> test:1:1
     |
   1 | 938266114
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 156985870.
    --> test:1:1
     |
   1 | 156985870
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 703831126.
    --> test:1:1
     |
   1 | 703831126
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 729964155.
    --> test:1:1
     |
   1 | 729964155
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 988151305.
    --> test:1:1
     |
   1 | 988151305
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 320872435.
    --> test:1:1
     |
   1 | 320872435
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 719287167.
    --> test:1:1
     |
   1 | 719287167
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 152289486.
    --> test:1:1
     |
   1 | 152289486
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 740067975.
    --> test:1:1
     |
   1 | 740067975
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 728627816.
    --> test:1:1
     |
   1 | 728627816
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 385008978.
    --> test:1:1
     |
   1 | 385008978
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 553967635.
    --> test:1:1
     |
   1 | 553967635
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 71980713.
    --> test:1:1
     |
   1 | 71980713
     | ^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 519444716.
    --> test:1:1
     |
   1 | 519444716
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 116499965.
    --> test:1:1
     |
   1 | 116499965
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 717422268.
    --> test:1:1
     |
   1 | 717422268
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 18966279.
    --> test:1:1
     |
   1 | 18966279
     | ^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 22458638.
    --> test:1:1
     |
   1 | 22458638
     | ^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 857282620.
    --> test:1:1
     |
   1 | 857282620
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 920675898.
    --> test:1:1
     |
   1 | 920675898
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 762235516.
    --> test:1:1
     |
   1 | 762235516
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 469018377.
    --> test:1:1
     |
   1 | 469018377
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 199986521.
    --> test:1:1
     |
   1 | 199986521
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 536679358.
    --> test:1:1
     |
   1 | 536679358
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 591399452.
    --> test:1:1
     |
   1 | 591399452
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 83083158.
    --> test:1:1
     |
   1 | 83083158
     | ^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 599449051.
    --> test:1:1
     |
   1 | 599449051
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 445442318.
    --> test:1:1
     |
   1 | 445442318
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 585486590.
    --> test:1:1
     |
   1 | 585486590
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 209278800.
    --> test:1:1
     |
   1 | 209278800
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 873568117.
    --> test:1:1
     |
   1 | 873568117
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 664470940.
    --> test:1:1
     |
   1 | 664470940
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 465262783.
    --> test:1:1
     |
   1 | 465262783
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 605652874.
    --> test:1:1
     |
   1 | 605652874
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 376803940.
    --> test:1:1
     |
   1 | 376803940
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 965247040.
    --> test:1:1
     |
   1 | 965247040
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 598474509.
    --> test:1:1
     |
   1 | 598474509
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 845119918.
    --> test:1:1
     |
   1 | 845119918
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 648159133.
    --> test:1:1
     |
   1 | 648159133
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 669051032.
    --> test:1:1
     |
   1 | 669051032
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 800600261.
    --> test:1:1
     |
   1 | 800600261
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 434689764.
    --> test:1:1
     |
   1 | 434689764
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 520060080.
    --> test:1:1
     |
   1 | 520060080
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 804659385.
    --> test:1:1
     |
   1 | 804659385
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 537828058.
    --> test:1:1
     |
   1 | 537828058
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 716600292.
    --> test:1:1
     |
   1 | 716600292
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 387020273.
    --> test:1:1
     |
   1 | 387020273
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 199375617.
    --> test:1:1
     |
   1 | 199375617
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 680337189.
    --> test:1:1
     |
   1 | 680337189
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 818479931.
    --> test:1:1
     |
   1 | 818479931
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 893693281.
    --> test:1:1
     |
   1 | 893693281
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 87377802.
    --> test:1:1
     |
   1 | 87377802
     | ^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 84699261.
    --> test:1:1
     |
   1 | 84699261
     | ^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 292826090.
    --> test:1:1
     |
   1 | 292826090
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 569171405.
    --> test:1:1
     |
   1 | 569171405
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 387436237.
    --> test:1:1
     |
   1 | 387436237
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 150682190.
    --> test:1:1
     |
   1 | 150682190
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 888770419.
    --> test:1:1
     |
   1 | 888770419
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 824696431.
    --> test:1:1
     |
   1 | 824696431
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 765659803.
    --> test:1:1
     |
   1 | 765659803
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 270163693.
    --> test:1:1
     |
   1 | 270163693
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 427940240.
    --> test:1:1
     |
   1 | 427940240
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 504997332.
    --> test:1:1
     |
   1 | 504997332
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 337808338.
    --> test:1:1
     |
   1 | 337808338
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 907200008.
    --> test:1:1
     |
   1 | 907200008
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 757177889.
    --> test:1:1
     |
   1 | 757177889
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 696697188.
    --> test:1:1
     |
   1 | 696697188
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 41376051.
    --> test:1:1
     |
   1 | 41376051
     | ^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 496293518.
    --> test:1:1
     |
   1 | 496293518
     | ^^^^^^^^^""",
    """
Error [EPAR0370017]: Could not parse the implicit value: 251218820.
    --> test:1:1
     |
   1 | 251218820
     | ^^^^^^^^^""",
]
